--- a/src/css/adminUserHandling.css
+++ b/src/css/adminUserHandling.css
@@ -7,7 +7,8 @@
 }
 
 .users-page h2 {
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
+  color: #fff;
 }
 
 .users-table-container {
@@ -17,6 +18,8 @@
 .users-table {
   width: 100%;
   border-collapse: collapse;
+  background: transparent;
+  backdrop-filter: blur(50px);
 }
 
 .users-table th,
@@ -25,11 +28,13 @@
   border-bottom: 1px solid #ddd;
   text-align: left;
   white-space: nowrap;
+  color: #fff;
 }
 
 .users-table th {
-  background-color: #f3f4f6;
+  background-color: #111d34;
   font-weight: 600;
+  border: 1px solid #ddd;
 }
 
 .status-btn {
@@ -49,16 +54,5 @@
   background-color: #10b981; /* green for unblock */
 }
 
-.delete-btn {
-  padding: 5px 10px;
-  border: none;
-  cursor: pointer;
-  border-radius: 4px;
-  background-color: #f87171; /* soft red */
-  color: white;
-}
 
-.delete-btn:hover,
-.status-btn:hover {
-  opacity: 0.8;
-}
+
